--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <ul class="flex-row icons">
             <li class="wowprogress-bg">
                 <!-- wowprogress favicon is so fucking scuffed that I just re-created it manually -->
-                <a href=https://www.wowprogress.com/guild/eu/dentarg/Halcyon target="_blank" rel="noopener noreferrer"><span class="wowprogress">W</span></a>
+                <a href=https://www.wowprogress.com/guild/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><span class="wowprogress">W</span></a>
             </li>
             <li>
-                <a href=https://raider.io/guilds/eu/dentarg/Halcyon target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/raiderio.png" alt="raiderio"></a>
+                <a href=https://raider.io/guilds/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/raiderio.png" alt="raiderio"></a>
             </li>
 
             <li>
-                <a href=https://www.warcraftlogs.com/guild/calendar/3216 target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
+                <a href=https://www.warcraftlogs.com/guild/calendar/56317 target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
             </li>
         </ul>
 
