--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Halcyon</title>
+    <title>Oblivion</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -20,12 +20,12 @@
 <body class="flex-row reset-gutter">
     <nav class="mobile-menu flex-row display-mobile">
         <i class="material-icons md-36 mobile-menu-icon" onclick="openNav()">menu</i>
-        <h1 class="main-header nav-header"><a href="/">HALCYON</a></h1>
+        <h1 class="main-header nav-header"><a href="/">OBLIVION</a></h1>
     </nav>
 
     <nav class="flex-col navigation" id="navigation">
         <header>
-            <h1 class="main-header nav-header display-desktop"><a href="/">HALCYON</a></h1>
+            <h1 class="main-header nav-header display-desktop"><a href="/">OBLIVION</a></h1>
             <i class="material-icons md-36 mobile-menu-icon close-icon display-mobile" onclick="closeNav()">close</i>
         </header>
 
