--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <section class="main-content flex-col">
         <div class="text-content">
-            <p>Halcyon was a World of Warcraft raiding guild formed so that a group of friends could game together. The guild was created in early 2013 and stopped playing in August 2021.</p>
+            <p>Oblivion ist eine deutsche World of Warcraft-Gilde, die seit Anfang Burning Crusade auf dem Server "Anub'arak" gegründet wurde.</p>
             <p>Our goal was always the same; efficient raiding <span>WITHOUT</span> enforcing alts, PTR tests, split runs or a treadmill grind inbetween tiers. Alts were welcomed, but not enforced. Above all we wanted to maintain a chill and enjoyable raid environment.
             </p>
 
