--- a/index.html
+++ b/index.html
@@ -66,21 +66,18 @@
 
     <section class="main-content flex-col">
         <div class="text-content">
-            <p>Oblivion ist eine deutsche World of Warcraft-Gilde, die seit Anfang Burning Crusade auf dem Server "Anub'arak" gegründet wurde.</p>
-            <p>Our goal was always the same; efficient raiding <span>WITHOUT</span> enforcing alts, PTR tests, split runs or a treadmill grind inbetween tiers. Alts were welcomed, but not enforced. Above all we wanted to maintain a chill and enjoyable raid environment.
+            <p>Oblivion wurde 2006 unter dem Namen "Symphony" auf dem Server Anub'arak gegründet und anschließend 2007 umbenannt. Wir sind somit eine der ältesten deutschen World of Warcraft-Gilden.</p>
+            <p>Oberste Priorität hat bei uns effizientes Raiden <span>OHNE</span> Alt-Pflicht.
             </p>
 
             <p> Originally we played a very limited schedule of nine hours per week spread on three days. However as the time it took to clear tiers shortened we decided, in Battle for Azeroth, that the schedule did not make sense any longer for our enjoyment for the game. Planning around real life would be easier by raiding more compact as opposed to locking in three nights a week for an extended period of time. As such we later changed to raid the first five days of mythic progress from 18 to 23. Immediately after that initial week we went back to our regular progress schedule:</p>
 
-            <p>Progress Raiding hours after first mythic week:</p>
+            <p>Progress-Schedule:</p>
             <ul class="raid-schedule">
-                <li><span>WEDNESDAY</span><span> 20.00 - 23.00 ST</span></li>
-                <li><span>THURSDAY</span><span> 20.00 - 23.00 ST</span></li>
-                <li>
-                    <div><span>SATURDAY</span><i class="schedule-info">(New, added raid day for Shadowlands)</div></i><span>18.00 - 23.00 ST</span>
-                </li>
-                <li>
-                    <div><span>SUNDAY</span><i class="schedule-info">(Usually weekly clear)</div></i><span> 18.00 - 23.00 ST</span>
+                <li><span>MITTWOCH</span><span> 19.00 - 23.00 Uhr</span></li>
+                <li><span>DONNERSTAG</span><span> 19.00 - 23.00 Uhr</span></li>
+                <li><span>SONNTAG</span><span> 19.00 - 23.00 Uhr</span></li>
+                <li><span>MONTAG</span><span> 19.00 - 23.00 Uhr</span></li>
                 </li>
             </ul>
 
