--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Oberste Priorität hat bei uns effizientes Raiden <span>OHNE</span> Alt-Pflicht.
             </p>
 
-            <p> Originally we played a very limited schedule of nine hours per week spread on three days. However as the time it took to clear tiers shortened we decided, in Battle for Azeroth, that the schedule did not make sense any longer for our enjoyment for the game. Planning around real life would be easier by raiding more compact as opposed to locking in three nights a week for an extended period of time. As such we later changed to raid the first five days of mythic progress from 18 to 23. Immediately after that initial week we went back to our regular progress schedule:</p>
+            <p> Nach über 10 Jahren auf Anub'arak sind wir am 19.06.2020 mit allen Membern nach Blackrock gezogen.</p>
 
             <p>Progress-Schedule:</p>
             <ul class="raid-schedule">
@@ -81,13 +81,13 @@
                 </li>
             </ul>
 
-            <p>We always raided with our raid logs publicly available. A rigid schedule was important to us such that we may plan real life around it.</p>
+            <p>Wir halten unsere Logs immer öffentlich.</p>
             </div>
 
             <div class="table-content">
                 <div class="table-header">
-                    <h2 class="main-header display-desktop">Excerpt of what we accomplished together</h2>
-                    <h2 class="main-header display-mobile">Excerpt of accomplishments</h2>
+                    <h2 class="main-header display-desktop">Gemeinsame Erfolge</h2>
+                    <h2 class="main-header display-mobile">Gemeinsame Erfolge</h2>
 
                 </div>
 
@@ -99,6 +99,15 @@
                             <th>Wipes</th>
                             <th>Date</th>
                         </tr>
+                        <tr>
+                            <td colspan="4" class="tier"><strong>Sepulcher of the First Ones</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="world-rank">85</td>
+                            <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild.github.io/master/assets/media/T27_Sanctum/halcyon_sylvanas.png">The Jailer</td>
+                            <td>101</td>
+                            <td>Aug 02, 2021</td>
+                            </tr>
                         <tr>
                             <td colspan="4" class="tier"><strong>Sanctum of Domination</strong></td>
                         </tr>
