--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
             <div class="table-content">
                 <div class="table-header">
-                    <h2 class="main-header display-desktop">Gemeinsame Erfolge</h2>
-                    <h2 class="main-header display-mobile">Gemeinsame Erfolge</h2>
+                    <h2 class="main-header display-desktop">Gildenhistorie</h2>
+                    <h2 class="main-header display-mobile">Gildenhistorie</h2>
 
                 </div>
 
