--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <p>Progress-Schedule:</p>
             <ul class="raid-schedule">
-                <li><span>MITTWOCH</span><span> 19.00 - 23.00 Uhr</span></li>
+                <li><span>MITTWOCH</span> 19.00 - 23.00 Uhr</span></li>
                 <li><span>DONNERSTAG</span><span> 19.00 - 23.00 Uhr</span></li>
                 <li><span>SONNTAG</span><span> 19.00 - 23.00 Uhr</span></li>
                 <li><span>MONTAG</span><span> 19.00 - 23.00 Uhr</span></li>
