--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Halcyon</title>
+    <title>Oblivion</title>
 
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
@@ -16,28 +16,28 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Halcyon</h1>
+            <h1>Oblivion</h1>
             <ul class="icons">
                 <li>
-                    <a href=https://www.wowprogress.com/guild/eu/dentarg/Halcyon><img class="icon" src="/halcyonguild.github.io/assets/media/icons/wowpro.png" alt="wowprogress"></a>
+                    <a href=https://www.wowprogress.com/guild/eu/blackrock/Oblivion><img class="icon" src="/oblivionguild.github.io/assets/media/icons/wowpro.png" alt="wowprogress"></a>
                 </li>
                 <li>
-                    <a href=https://raider.io/guilds/eu/dentarg/Halcyon><img class="icon" src="/halcyonguild.github.io/assets/media/icons/raiderio.png" alt="raiderio"></a>
+                    <a href=https://raider.io/guilds/eu/blackrock/Oblivion><img class="icon" src="/oblivionguild.github.io/assets/media/icons/raiderio.png" alt="raiderio"></a>
                 </li>
                 <li>
-                    <a href=https://www.warcraftlogs.com/guild/calendar/3216><img class="icon" src="/halcyonguild.github.io/assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></li>
+                    <a href=https://www.warcraftlogs.com/guild/calendar/56317><img class="icon" src="/oblivionguild.github.io/assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></li>
             </ul>
-            <p class="view"><a href="https://github.com/halcyonguild">View the Project on GitHub <small>github/halcyonguild</small></a></p>
+            <p class="view"><a href="https://github.com/oblivionguild">View the Project on GitHub <small>github/oblivionguild</small></a></p>
             <ul class="button">
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdnffWvIpcz3yGt_qRCZsMg3eq2voT0luBhsUXOrVzOfz7k7A/viewform?usp=sf_link">Click to <strong>Apply</strong></a></li>
             </ul>
             <p class="space"></p>
             <ul class="legend">
-                <li><a href="/halcyonguild.github.io/">Home/</a></li>
+                <li><a href="/oblivionguild.github.io/">Home/</a></li>
                 <li><a href="/pages/killcount">Kill list/</a></li>
-                <li><a href="https://worldofwarcraft.com/en-gb/guild/eu/dentarg/halcyon">Players/</a></li>
-                <li><a href="/halcyonguild.github.io/pages/videos">Videos/</a></li>
-                <li><a href="https://wago.io/p/moet">WeakAuras/</a></li>
+                <li><a href="https://worldofwarcraft.com/en-de/guild/eu/blackrock/oblivion">Players/</a></li>
+                <li><a href="/oblivionguild.github.io/pages/videos">Videos/</a></li>
+                <li><a href="https://wago.io/p/squallne">WeakAuras/</a></li>
             </ul>
         </header>
         <section>
