--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -54,7 +54,7 @@
 
             <li><a href="/pages/raiding" class="flex-row"><span class="emphasize">RAIDING </span><i class="emphasize material-icons md-18">navigate_next</i></a></li>
             <li><a href="/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
-            <!--<li><a href="/halcyonguild.github.io/pages/videos">Videos/</a></li>-->
+            <!--<li><a href="/oblivionguild.github.io/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/moet" class="flex-row" target="_blank" rel="noopener noreferrer"><span>WEAKAURAS</span><i class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
@@ -774,7 +774,7 @@
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
-                    <p>Fetid Devourer, Halcyon's End</p>
+                    <p>Fetid Devourer</p>
                     <p class="world-rank">65</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 147</p>
@@ -1227,7 +1227,7 @@
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
-                    <p>Nythendra, Halcyon's Rebirth</p>
+                    <p>Nythendra</p>
                     <p class="world-rank">651</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 28</p>
