--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -58,7 +58,7 @@
             <li><a href="https://wago.io/p/moet" class="flex-row" target="_blank" rel="noopener noreferrer"><span>WEAKAURAS</span><i class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
-        <a class="github-link display-desktop" href="https://github.com/oblivionguild"><span class="flex-row">View on GitHub<i class="material-icons md-18 open-new-icon">open_in_new</i></span> <small>github/oblivionguild</small></a>
+        <a class="github-link display-desktop" href="https://sheffywow.github.io/oblivionguild.github.io"><span class="flex-row">View on GitHub<i class="material-icons md-18 open-new-icon">open_in_new</i></span> <small>github/oblivionguild</small></a>
     </nav>
 
     <section class="main-content tier-row flex-row" id="kill-count-table">
