--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -55,10 +55,10 @@
             <li><a href="/pages/raiding" class="flex-row"><span class="emphasize">RAIDING </span><i class="emphasize material-icons md-18">navigate_next</i></a></li>
             <li><a href="/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="/oblivionguild.github.io/pages/videos">Videos/</a></li>-->
-            <li><a href="https://wago.io/p/moet" class="flex-row" target="_blank" rel="noopener noreferrer"><span>WEAKAURAS</span><i class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="https://wago.io/p/squallne" class="flex-row" target="_blank" rel="noopener noreferrer"><span>WEAKAURAS</span><i class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
-        <a class="github-link display-desktop" href="https://sheffywow.github.io/oblivionguild.github.io"><span class="flex-row">View on GitHub<i class="material-icons md-18 open-new-icon">open_in_new</i></span> <small>github/oblivionguild</small></a>
+        <a class="github-link display-desktop" href="https://github.com/SheffyWoW/oblivionguild.github.io"><span class="flex-row">View on GitHub<i class="material-icons md-18 open-new-icon">open_in_new</i></span> <small>github/oblivionguild</small></a>
     </nav>
 
     <section class="main-content tier-row flex-row" id="kill-count-table">
