--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -52,8 +52,8 @@
         <ul class="legend">
             <li><a href="/" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a></li>
 
-            <li><a href="/pages/raiding" class="flex-row"><span class="emphasize">RAIDING </span><i class="emphasize material-icons md-18">navigate_next</i></a></li>
-            <li><a href="/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild.github.io/pages/raiding" class="flex-row"><span class="emphasize">RAIDING </span><i class="emphasize material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild.github.io/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="/oblivionguild.github.io/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" class="flex-row" target="_blank" rel="noopener noreferrer"><span>WEAKAURAS</span><i class="material-icons md-18">navigate_next</i></a></li>
         </ul>
