--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a href="/pages/raiding" class="flex-row"><span>RAIDING </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>-->
-            <!--<li><a href="/pages/videos">Videos/</a></li>-->
+            <!--<li><a href="oblivionguild.github.io/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
         </ul>
