--- a/pages/roster.html
+++ b/pages/roster.html
@@ -54,7 +54,7 @@
         </button>
 
         <ul class="legend">
-            <li><a href="/" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a>
+            <li><a href="https://sheffywow.github.io/oblivionguild.github.io" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a>
             </li>
 
             <li><a href="https://sheffywow.github.io/oblivionguild.github.io/pages/raiding" class="flex-row"><span>RAIDING </span><i
