--- a/pages/roster.html
+++ b/pages/roster.html
@@ -49,7 +49,7 @@
         </ul>
 
         <button class="button">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnffWvIpcz3yGt_qRCZsMg3eq2voT0luBhsUXOrVzOfz7k7A/viewform?usp=sf_link"
+            <a href="https://docs.google.com/forms/d/1l9cmVak1sj0khKXrwM1TPaDcbWHRt3GA8wIcr7lhYjU"
                 class="apply" target="_blank" rel="noopener noreferrer">APPLY</a>
         </button>
 
