--- a/pages/videos.html
+++ b/pages/videos.html
@@ -29,7 +29,7 @@
             </ul>
             <p class="view"><a href="https://github.com/oblivionguild">View the Project on GitHub <small>github/oblivionguild</small></a></p>
             <ul class="button">
-                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdnffWvIpcz3yGt_qRCZsMg3eq2voT0luBhsUXOrVzOfz7k7A/viewform?usp=sf_link">Click to <strong>Apply</strong></a></li>
+                <li><a href="https://docs.google.com/forms/d/1l9cmVak1sj0khKXrwM1TPaDcbWHRt3GA8wIcr7lhYjU">Click to <strong>Apply</strong></a></li>
             </ul>
             <p class="space"></p>
             <ul class="legend">
