--- a/pages/roster.html
+++ b/pages/roster.html
@@ -115,7 +115,7 @@
             </div>
 
             <div class="player-card">
-                <img class="germany">
+                <img class="switzerland">
                 <strong class="paladin">ZAIRINA</strong>
                 <img class="class paladin">
             </div>
@@ -151,7 +151,7 @@
             </div>
 
             <div class="player-card">
-                <img class="germany">
+                <img class="switzerland">
                 <strong class="druid">GRODIEN</strong>
                 <img class="class druid">
             </div>
@@ -163,7 +163,7 @@
             </div>
 
             <div class="player-card">
-                <img class="germany">
+                <img class="austria">
                 <strong class="warlock">LYARU</strong>
                 <img class="class warlock">
             </div>
