Add Sepulcher VODs

--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -75,6 +75,7 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Zovaal, the Jailer</p>
+                    <a href="https://www.youtube.com/watch?v=Djp2SFTgVIs" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">82</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 294</p>
@@ -83,7 +84,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Rygelon</p>
-
+                    <a href="https://www.youtube.com/watch?v=9ZMzlr8pj1A" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">85</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 85</p>
@@ -92,7 +93,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Lords of Dread</p>
-
+                    <a href="https://www.youtube.com/watch?v=H5PN0r7GdOE" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">82</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 22</p>
@@ -101,7 +102,7 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Anduin Wrynn</p>
-
+                    <a href="https://www.youtube.com/watch?v=SRbk8o2iTeY" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">85</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 168</p>
@@ -110,16 +111,16 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Lihuvim</p>
-
+                    <a href="https://www.youtube.com/watch?v=jmZNvPZeUw4" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">57</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 38</p>
-                        <p class="subtitle">Mär 21, 2022</p>
+                        <p class="subtitle">Mar 21, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Halondrus</p>
-
+                    <a href="https://www.youtube.com/watch?v=OEl6zFg6-sY" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">84</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 168</p>
@@ -128,47 +129,47 @@
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Skolex</p>
-
+                    <a href="https://www.youtube.com/watch?v=vsrKThGuA9M" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">69</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 11</p>
-                        <p class="subtitle">Mär 13, 2022</p>
+                        <p class="subtitle">Mar 13, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Prototype Pantheon</p>
-
+                    <a href="https://www.youtube.com/watch?v=1FrNrpwCrko" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">68</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 34</p>
-                        <p class="subtitle">Mär 20, 2022</p>
+                        <p class="subtitle">Mar 20, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Artificer Xy'mox</p>
-
+                    <a href="https://www.youtube.com/watch?v=8Y9m2Tx6kjY" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">34</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 14</p>
-                        <p class="subtitle">Mär 13, 2022</p>
+                        <p class="subtitle">Mar 13, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Dausegne</p>
-                    
+                    <a href="https://www.youtube.com/watch?v=px6k0DNPITQ" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">81</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 31</p>
-                        <p class="subtitle">Mär 14, 2022</p>
+                        <p class="subtitle">Mar 14, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Vigilant Guardian</p>
-                    
+                    <a href="https://www.youtube.com/watch?v=XhVigH8srR8" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">37</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 1</p>
-                        <p class="subtitle">Mär 10, 2022</p>
+                        <p class="subtitle">Mar 10, 2022</p>
                     </div>
                 </div>
             </div>
