--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <td class="world-rank">82</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild.github.io/master/assets/media/T28_Sepulcher/oblivion_jailer.png">The Jailer</td>
                             <td>295</td>
-                            <td>Mai 05, 2022</td>
+                            <td>May 05, 2022</td>
                             </tr>
                         <tr>
                             <td colspan="4" class="tier"><strong>Sanctum of Domination</strong></td>
