--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <td>114</td>
                             <td>Oct 14, 2018</td>
                         </tr>
-                            <td colspan="4"><strong>Antorus, the Burning Throne</strong> (*)</td>
+                            <td colspan="4"><strong>Antorus, the Burning Throne</strong></td>
                         </tr>
                         <tr>
                             <td class="world-rank">68</td>
@@ -174,7 +174,7 @@
                             <td>222</td>
                             <td>Jan 24, 2018</td>
                         </tr>
-                            <td colspan="4"><strong>Tomb of Sargeras</strong> (*)</td>
+                            <td colspan="4"><strong>Tomb of Sargeras</strong></td>
                         </tr>
                         <tr>
                             <td class="world-rank">58</td>
@@ -182,7 +182,7 @@
                             <td>364</td>
                             <td>Sep 13, 2017</td>
                         </tr>
-                            <td colspan="4"><strong>Nighthold, Trial of Valor, Emerald Nightmare</strong> (*)</td>
+                            <td colspan="4"><strong>Nighthold, Trial of Valor, Emerald Nightmare</strong></td>
                         </tr>
                         <tr>
                             <td class="world-rank">89</td>
@@ -203,7 +203,7 @@
                             <td>Oct 27, 2016</td>
                         </tr>
                         <tr>
-                            <td colspan="4"><strong>Hellfire Citadel</strong> (*)</td>
+                            <td colspan="4"><strong>Hellfire Citadel</strong></td>
                         </tr>
                         <tr>
                             <td class="world-rank">130</td>
@@ -211,14 +211,7 @@
                             <td>?</td>
                             <td>Jul 12, 2015</td>
                         </tr>
-                        <tr>
-                            <td class="world-rank">64</td>
-                            <td>Iron Reaver</td>
-                            <td>?</td>
-                            <td>Jul 2, 2015</td>
-                        </tr>
-                        <tr>
-                            <td colspan="4"><strong>Highmaul, Blackrock Foundry</strong> (*)</td>
+                            <td colspan="4"><strong>Highmaul, Blackrock Foundry</strong></td>
                         </tr>
                         <tr>
                             <td class="world-rank">77</td>
@@ -240,13 +233,6 @@
                             <td>?</td>
                             <td>Jun 10, 2014</td>
                         </tr>
-                        <tr>
-                            <td class="world-rank">400</td>
-                            <td>Garrosh Hellscream (10)</td>
-                            <td>?</td>
-                            <td>Mar 7, 2014</td>
-                        </tr>
-                        <tr>
                             <td colspan="4"><strong>Throne of Thunder</strong></td>
                         </tr>
                         <tr>
