Update Roster Order

--- a/pages/roster.html
+++ b/pages/roster.html
@@ -146,16 +146,22 @@
 
             <div class="player-card">
                 <img class="germany">
+                <strong class="priest">Dang</strong>
+                <img class="class priest">
+            </div>
+
+            <div class="player-card">
+                <img class="germany">
                 <strong class="druid">BOESCHER</strong>
                 <img class="class druid">
             </div>
-
+            
             <div class="player-card">
                 <img class="switzerland">
                 <strong class="druid">GRODIEN</strong>
                 <img class="class druid">
             </div>
-            
+
             <div class="player-card">
                 <img class="germany">
                 <strong class="druid">MEECO</strong>
@@ -176,6 +182,12 @@
 
             <div class="player-card">
                 <img class="germany">
+                <strong class="rogue">SELIANDRA</strong>
+                <img class="class rogue">
+            </div>
+
+            <div class="player-card">
+                <img class="germany">
                 <strong class="mage">TRAMNUX</strong>
                 <img class="class mage">
             </div>
@@ -184,18 +196,6 @@
                 <img class="germany">
                 <strong class="mage">FLOWMILLION</strong>
                 <img class="class mage">
-            </div>
-
-            <div class="player-card">
-                <img class="germany">
-                <strong class="priest">DANG</strong>
-                <img class="class priest">
-            </div>
-
-            <div class="player-card">
-                <img class="germany">
-                <strong class="rogue">SELIANDRA</strong>
-                <img class="class rogue">
             </div>
 
             <div class="player-card">
