--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul class="legend">
             <li><a href="/" class="flex-row"><span class="emphasize">HOME </span><i
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
-            <li><a href="https://sheffywow.github.io/oblivionguild.github.io/pages/raiding" class="flex-row"><span>RAIDING </span><i
+            <li><a href="https://sheffywow.github.io/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>-->
             <!--<li><a href="oblivionguild.github.io/pages/videos">Videos/</a></li>-->
