--- a/pages/videos.html
+++ b/pages/videos.html
@@ -19,13 +19,13 @@
             <h1>Oblivion</h1>
             <ul class="icons">
                 <li>
-                    <a href=https://www.wowprogress.com/guild/eu/blackrock/Oblivion><img class="icon" src="/oblivionguild.github.io/assets/media/icons/wowpro.png" alt="wowprogress"></a>
+                    <a href=https://www.wowprogress.com/guild/eu/blackrock/Oblivion><img class="icon" src="/oblivionguild/assets/media/icons/wowpro.png" alt="wowprogress"></a>
                 </li>
                 <li>
-                    <a href=https://raider.io/guilds/eu/blackrock/Oblivion><img class="icon" src="/oblivionguild.github.io/assets/media/icons/raiderio.png" alt="raiderio"></a>
+                    <a href=https://raider.io/guilds/eu/blackrock/Oblivion><img class="icon" src="/oblivionguild/assets/media/icons/raiderio.png" alt="raiderio"></a>
                 </li>
                 <li>
-                    <a href=https://www.warcraftlogs.com/guild/calendar/56317><img class="icon" src="/oblivionguild.github.io/assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></li>
+                    <a href=https://www.warcraftlogs.com/guild/calendar/56317><img class="icon" src="/oblivionguild/assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></li>
             </ul>
             <p class="view"><a href="https://github.com/oblivionguild">View the Project on GitHub <small>github/oblivionguild</small></a></p>
             <ul class="button">
@@ -33,10 +33,10 @@
             </ul>
             <p class="space"></p>
             <ul class="legend">
-                <li><a href="/oblivionguild.github.io/">Home/</a></li>
+                <li><a href="/oblivionguild/">Home/</a></li>
                 <li><a href="/pages/killcount">Kill list/</a></li>
                 <li><a href="https://worldofwarcraft.com/en-de/guild/eu/blackrock/oblivion">Players/</a></li>
-                <li><a href="/oblivionguild.github.io/pages/videos">Videos/</a></li>
+                <li><a href="/oblivionguild/pages/videos">Videos/</a></li>
                 <li><a href="https://wago.io/p/squallne">WeakAuras/</a></li>
             </ul>
         </header>
