--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -50,7 +50,7 @@
         </button>
 
         <ul class="legend">
-            <li><a href="https://sheffywow/oblivionguild/" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="https://sheffywow.github.io/oblivionguild/" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a></li>
 
             <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span class="emphasize">RAIDING </span><i class="emphasize material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
