--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -21,12 +21,12 @@
 <body class="flex-row reset-gutter">
     <nav class="mobile-menu flex-row display-mobile">
         <i class="material-icons md-36 mobile-menu-icon" onclick="openNav()">menu</i>
-        <h1 class="main-header nav-header"><a href="/">OBLIVION</a></h1>
+        <h1 class="main-header nav-header"><a href="https://sheffywow.github.io/oblivionguild">OBLIVION</a></h1>
     </nav>
 
     <nav class="flex-col navigation" id="navigation">
         <header>
-            <h1 class="main-header nav-header display-desktop"><a href="/">OBLIVION</a></h1>
+            <h1 class="main-header nav-header display-desktop"><a href="https://sheffywow.github.io/oblivionguild">OBLIVION</a></h1>
             <i class="material-icons md-36 mobile-menu-icon close-icon display-mobile" onclick="closeNav()">close</i>
         </header>
 
