--- a/pages/roster.html
+++ b/pages/roster.html
@@ -21,12 +21,12 @@
 
     <nav class="mobile-menu flex-row display-mobile">
         <i class="material-icons md-36 mobile-menu-icon" onclick="openNav()">menu</i>
-        <h1 class="main-header nav-header"><a href="/">OBLIVION</a></h1>
+        <h1 class="main-header nav-header"><a href="https://sheffywow.github.io/oblivionguild/">OBLIVION</a></h1>
     </nav>
 
     <nav class="flex-col navigation" id="navigation">
         <header>
-            <h1 class="main-header nav-header display-desktop"><a href="/">OBLIVION</a></h1>
+            <h1 class="main-header nav-header display-desktop"><a href="https://sheffywow.github.io/oblivionguild/">OBLIVION</a></h1>
             <i class="material-icons md-36 mobile-menu-icon close-icon display-mobile" onclick="closeNav()">close</i>
         </header>
 
@@ -54,12 +54,12 @@
         </button>
 
         <ul class="legend">
-            <li><a href="https://sheffywow/oblivionguild" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a>
+            <li><a href="https://sheffywow.github.io/oblivionguild" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a>
             </li>
 
-            <li><a href="https://sheffywow/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
+            <li><a href="https://sheffywow.github.io/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
                         class=" material-icons md-18">navigate_next</i></a></li>
-            <li><a href="https://sheffywow/oblivionguild/pages/roster" class="flex-row"><span class="emphasize">ROSTER</span><i
+            <li><a href="https://sheffywow.github.io/oblivionguild/pages/roster" class="flex-row"><span class="emphasize">ROSTER</span><i
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="/oblivionguild/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" class="flex-row" target="_blank"
